[gd_scene load_steps=5 format=3 uid="uid://b4xfpf36em8w3"]

[ext_resource type="Script" uid="uid://dvsnrd6llkxqm" path="res://Scripts/Ennemy.gd" id="1_h0oj7"]
[ext_resource type="Material" uid="uid://cgjytrm22iqa3" path="res://Materials/M_Ennemy.tres" id="1_xpdnx"]

[sub_resource type="BoxMesh" id="BoxMesh_h0oj7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pnaab"]

[node name="Ennemy" type="RigidBody3D"]
script = ExtResource("1_h0oj7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_xpdnx")
mesh = SubResource("BoxMesh_h0oj7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_pnaab")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_pnaab")

[node name="CollisionDamageTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="CollisionDamageTimer" to="." method="_on_collision_damage_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
